visual.css
.Visual-absolute {
  position: absolute;
  top: 0;
  left: 0;
}

.Visual-metrics {
  position: fixed;
  top: -10000px;
  left: -10000px;
  white-space: pre;
  padding: 0;
  pointer-events: none;
  visibility: hidden;
}

/* Workspace */

.Visual-workspace {
  background: #ddd;
  cursor: default;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -o-user-select: none;
  user-select: none;
}

body.Visual-workspace {
  height: 100%;
  margin: 0;
}

.Visual-feedback {
  z-index: 1;
}

/* Script */

.Visual-script {
  white-space: nowrap;
  pointer-events: none;
}

.Visual-script-dragging {
  z-index: 1;
}

/* Block */

/*.Visual-command {
  display: block;
  float: left;
  clear: both;
  padding: 3px 5px;
}

.Visual-puzzled {
  margin-bottom: -3px;
  padding-bottom: 6px;
}

.Visual-reporter {
  padding: 2px;
}

.Visual-reporter > .Visual-canvas + .Visual-label,
.Visual-reporter > .Visual-canvas + .Visual-string-arg,
.Visual-reporter > .Visual-canvas + .Visual-color-arg {
  margin-left: 5px;
}
.Visual-reporter > .Visual-label:last-child,
.Visual-reporter > .Visual-string-arg:last-child,
.Visual-reporter > .Visual-color-arg:last-child {
  margin-right: 5px;
}
.Visual-boolean-reporter > .Visual-canvas + .Visual-label,
.Visual-boolean-reporter > .Visual-canvas + .Visual-string-arg,
.Visual-boolean-reporter > .Visual-canvas + .Visual-color-arg {
  margin-left: 9px;
}
.Visual-boolean-reporter > .Visual-label:last-child,
.Visual-boolean-reporter > .Visual-string-arg:last-child,
.Visual-boolean-reporter > .Visual-color-arg:last-child {
  margin-right: 9px;
}*/

/* Arg */

/*.Visual-part {
  display: inline-block;
  position: relative;
  vertical-align: middle;
  margin-left: 2px;
  margin-right: 2px;
}

.Visual-script > .Visual-part {
  margin: 0;
}

.Visual-field-arg {
  margin-top: 1px;
  margin-bottom: 1px;
}

.Visual-script-arg {
  margin: 3px 0 3px 10px;
  display: block;
  position: relative;
}

.Visual-script-arg:last-child {
  margin-bottom: 13px;
}

.Visual-color-arg {
  margin-top: 2px;
  margin-bottom: 2px;
}*/

.Visual-color-field {
  opacity: 0;
  pointer-events: auto;
}

.Visual-field {
  color: #555;
  font: 400 11px Helvetica Neue, Helvetica, Arial, sans-serif;
  /*padding: .1em 4px .2em 5px;
  height: 1.5em;
  box-sizing: border-box;
  -moz-box-sizing: border-box;*/
  margin: 0;
  padding: 0;
  border: 0;
  background: 0;
  outline: 0;
}
.Visual-field:focus {
  pointer-events: auto;
}

.Visual-text-field,
.Visual-enum-field {
  padding: 0 4px;
}

.Visual-enum-field {
  color: #fff;
}

/* .Visual-arrow {
  position: absolute;
  right: 4px;
  top: 6px;
} */

/* Label */

.Visual-label {
  font: 600 11px/1.4 Helvetica Neue, Helvetica, Arial, sans-serif;
  letter-spacing: .02em;
  color: #fff;
}

/* Icon */

/*.Visual-icon-loop {
  position: absolute;
  width: 14px;
  height: 11px;
  bottom: 6px;
  right: 2px;
  margin: 0;
}*/

/* Menu */

.Visual-menu {
  position: fixed;
  background: rgba(255, 255, 255, .95);
  border-radius: 3px;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, .3), 0 3px 8px rgba(0, 0, 0, .3);
  padding: 5px 0;
  z-index: 10000;
}

.Visual-menu-line {
  margin: 5px 0;
  height: 1px;
  background: rgba(0, 0, 0, .2);
}

.Visual-menu-item {
  padding: 2px 8px;
  font: 12px Helvetica Neue, Helvetica, Arial, sans-serif;
}

.Visual-menu-item:hover {
  background: rgba(0, 0, 0, .8);
  color: #fff;
}

